fixed footer gap again

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -53,7 +53,7 @@
     margin-bottom: 1rem;
   }
 }
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 400px) {
   .footer-wrapper{
     column-gap: 30px !important;
 
